package tw.neilchen.sample.mymovies.ui.util

/**
 * Tags for unit test.
 */
object TestTags {

    const val MY_MOVIE_LIST = "MY_MOVIE_LIST"
    const val MOVIE_ITEM = "MOVIE_ITEM"
    const val MOVIE_BACKDROP_IMAGE = "MOVIE_BACKDROP_IMAGE"
    const val MOVIE_DETAIL_CONTENT = "MOVIE_DETAIL_CONTENT"
    const val MOVIE_VIDEO_CONTENT = "MOVIE_VIDEO_CONTENT"
    const val MOVIE_POSTER_IMAGE = "MOVIE_POSTER_IMAGE"
    const val NAVIGATION_ICON_BACK = "NAVIGATION_ICON_BACK"
}